--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -5,7 +5,8 @@
   line-height: 76px;
 }
 
-.choice_title {
+.choice_title,
+.borrower_information {
   font-size: 24px;
   line-height: 38px;
   font-weight: 400;
@@ -19,5 +20,10 @@
     font-size: 24px;
     line-height: 38px;
     color: #07b1fd;
+  }
+}
+.borrower_information {
+  &::before {
+    content: '02';
   }
 }
