--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -1,3 +1,9 @@
+.MuiFilledInput-root {
+  background-color: rgba(0, 0, 0, -0.9);
+  border: 1px solid;
+  border-radius: 2px;
+}
+
 .credit_title {
   color: #2c2c2c;
   font-size: 64px;
@@ -26,4 +32,21 @@
   &::before {
     content: '02';
   }
+}
+span .MuiSlider-rail {
+  height: 6px;
+  background: #c4c4c4;
+  border-radius: 8px;
+}
+
+span .MuiSlider-track {
+  height: 6px;
+  background: linear-gradient(270deg, #07b1fd 0%, #bceaff 72.4%);
+  border-radius: 8px;
+}
+span .MuiSlider-thumb {
+  width: 16px;
+  height: 16px;
+  color: #ffffff;
+  filter: drop-shadow(-1px 2px 5px rgba(0, 0, 0, 0.31));
 }
