--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -50,3 +50,16 @@ span .MuiSlider-thumb {
   color: #ffffff;
   filter: drop-shadow(-1px 2px 5px rgba(0, 0, 0, 0.31));
 }
+
+.car_cost {
+  font-size: 1.125rem;
+  color: #8d8d8d;
+  line-height: 160%;
+}
+.car_sum {
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 160%;
+  color: #07b1fd;
+  line-height: 160%;
+}
