--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -22,7 +22,11 @@
     font-size: 18px;
   }
 }
-
 .logo_footer {
   margin-left: 36px;
+}
+.footer_box_mobile {
+  background: #181f26;
+  color: #9f9f9f;
+  font-size: 16px;
 }
