--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -30,3 +30,9 @@
   color: #9f9f9f;
   font-size: 16px;
 }
+.MuiAccordionSummary-content.Mui-expanded {
+  color: #00b3ff;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
