--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -36,3 +36,9 @@
   font-size: 24px;
   line-height: 28px;
 }
+.MuiAccordionDetails-root {
+  color: #bdbdbd;
+}
+.MuiAccordionSummary-root {
+  display: inline-flex;
+}
