--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -4,13 +4,6 @@
   border-radius: 2px;
 }
 
-.credit_title {
-  color: #2c2c2c;
-  font-size: 64px;
-  font-weight: 700;
-  line-height: 76px;
-}
-
 .choice_title,
 .borrower_information {
   font-size: 24px;
@@ -32,6 +25,11 @@
   &::before {
     content: '02';
   }
+}
+.trusted_persons {
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 400;
 }
 span .MuiSlider-rail {
   height: 6px;
