--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -61,3 +61,44 @@ span .MuiSlider-thumb {
   color: #07b1fd;
   line-height: 160%;
 }
+.car_name {
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 22px;
+  color: #464646;
+}
+.selected {
+  background-color: red;
+}
+
+.selected.clicked {
+  background-color: green;
+  .clicked {
+    color: #07b1fd;
+  }
+}
+
+.price_blue {
+  color: #07b1fd;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 38px;
+}
+.price_black {
+  font-size: 1.125rem;
+  line-height: 29px;
+  font-weight: 400;
+  color: #949494;
+}
+.month_blue {
+  color: #07b1fd;
+  font-size: 0.875rem;
+  line-height: 24px;
+  font-weight: 700;
+}
+.month_black {
+  color: #464646;
+  font-size: 0.875rem;
+  line-height: 24px;
+  font-weight: 400;
+}
