--- a/src/styles/_autocredit.scss
+++ b/src/styles/_autocredit.scss
@@ -48,7 +48,15 @@ span .MuiSlider-thumb {
   color: #ffffff;
   filter: drop-shadow(-1px 2px 5px rgba(0, 0, 0, 0.31));
 }
-
+.card_prices {
+  align-items: center;
+  padding: 7px 0;
+}
+.card_controls {
+  align-items: center;
+  justify-content: center;
+  padding: 15px 0;
+}
 .car_cost {
   font-size: 1.125rem;
   color: #8d8d8d;
@@ -66,15 +74,37 @@ span .MuiSlider-thumb {
   font-weight: 700;
   line-height: 22px;
   color: #464646;
+  padding-bottom: 15px;
 }
 .selected {
   background-color: red;
 }
+.form_control {
+  width: 318px;
+  height: 60px;
+  align-items: center;
+  border-radius: 10px;
+  margin-left: 0px;
+}
+.MuiFormControlLabel-root {
+  justify-content: space-around;
+}
 
 .selected.clicked {
-  background-color: green;
+  border: 1px solid #07b1fd;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   .clicked {
     color: #07b1fd;
+  }
+  .form_control {
+    background: #07b1fd;
+  }
+  .MuiIconButton-label {
+    color: #ffffff;
+  }
+  .MuiTypography-body1 {
+    color: #ffffff;
   }
 }
 
@@ -83,6 +113,8 @@ span .MuiSlider-thumb {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 38px;
+  float: left;
+  margin-right: 5px;
 }
 .price_black {
   font-size: 1.125rem;
@@ -101,4 +133,7 @@ span .MuiSlider-thumb {
   font-size: 0.875rem;
   line-height: 24px;
   font-weight: 400;
+}
+.align_text {
+  text-align: end;
 }
